--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -301,7 +301,7 @@
       {{ content_for_layout }}
       <ul class="icon-fixed">
         <li>
-          <a href='https://chat.zalo.me/index.html' class="icon-zalo">
+          <a href='https://oa.zalo.me/manage/oa' class="icon-zalo">
             <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_574_28074)">
             <g clip-path="url(#clip1_574_28074)">
