--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -57,6 +57,7 @@ slideshow-component .slideshow.banner {
 
   .banner--mobile-bottom .slideshow__text.banner__box {
     max-width: 100%;
+    text-align: left;
   }
 
   .banner--mobile-bottom .slideshow__text-wrapper {
