--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -469,6 +469,13 @@
   font-family: 'BeautiqueDisplay';
 }
 
+@media screen and (max-width: 749px) {
+  .banner__heading {
+    font-size: 36px;
+    line-height: 57px;
+  }
+}
+
 .banner__box .banner__heading + * {
   margin-top: 1rem;
 }
