--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -496,6 +496,14 @@
   border-radius: 5px;
 }
 
+.banner__buttons .button::after {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  box-shadow: none;
+}
+
 @media screen and (max-width: 749px) {
   .banner--content-align-mobile-right .banner__buttons--multiple {
     justify-content: flex-end;
