--- a/snippets/about-block-2.liquid
+++ b/snippets/about-block-2.liquid
@@ -1,5 +1,6 @@
 <div class="box-content about-box">
-  <div class="page-width mt-8">
+  <div
+    class="page-width mt-8">
     <h2 class="text-2xl font-semibold">{{ block.settings.block2_header_heading }}</h2>
     <div class="grid grid-cols-2 gap-12">
       <div class="box_block">
