--- a/assets/about.css
+++ b/assets/about.css
@@ -39,7 +39,7 @@
 }
 
 .box-content-container {
-    background-image: url(bg.png);
+    background-color: #3B0B07;
 }
 
 .about-box .page-width{
@@ -91,6 +91,11 @@
 .box-vision .box_blocks {
     padding: 0px 24px;
     text-align: start;
+    p {
+        margin: 0;
+        font-family: 'BeautiqueDisplay';
+        color: rgba(229, 203, 144, 1);
+    }
 }
 
 .box_blocks h1 {
@@ -106,6 +111,13 @@
     display: flex;
     align-items: end;
     margin-bottom: 16px;
+}
+
+.img-avatar {
+    width : 80px;
+    height: 80px;
+    border-radius: 40px;
+    object-fit: cover;
 }
 
 .box_block .box_block_flex h2 {
@@ -161,8 +173,8 @@
     text-align: justify;
 }
 
-.grid-cols-4 {
-    grid-template-columns: repeat(4, 1fr);
+.grid-cols-3 {
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .gap-12 {
@@ -202,7 +214,7 @@
         margin: 0 0 16px;
     }
 
-    .grid-cols-4  {
+    .grid-cols-3  {
         grid-template-columns: repeat(2, 1fr);
     }
 
@@ -218,7 +230,7 @@
 
 @media screen and (max-width: 640px) {
     .grid-cols-2,
-    .box-content .grid-cols-4 {
+    .box-content .grid-cols-3 {
         grid-template-columns: repeat(1, 1fr);
     }
 
