--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -187,11 +187,13 @@
       font-size: 36px;
       line-height: 57px;
       font-weight: 700;
+      font-family: 'BeautiqueDisplay';
     }
     h6 {
       font-size: 16px;
       font-weight: 400;
       line-height: 24px;
+      font-family: 'PlusJakartaSans';
     }
   }
 
