--- a/snippets/about-block-home-1.liquid
+++ b/snippets/about-block-home-1.liquid
@@ -1,5 +1,6 @@
 <div class="containers mx-auto py-8 box-vision about-box">
-  <div class="page-width">
+  <div
+    class="page-width">
     <div class="grid grid-cols-2 gap-6">
       <div class="box_blocks">
         <h1>{{ block.settings.block_heading_1 }}</h1>
@@ -10,6 +11,7 @@
           <img
             src="{{ block.settings.image_heading_2 | image_url: width: 80 }}"
             alt="{{ block.settings.image_heading_2.alt | escape }}"
+            class="img-avatar"
             loading="lazy">
           <h2>{{ block.settings.block_heading_2 }}</h2>
         </div>
