--- a/snippets/about-block-home-2.liquid
+++ b/snippets/about-block-home-2.liquid
@@ -1,7 +1,8 @@
 <div class="box-content about-box">
-  <div class="page-width mt-8">
+  <div
+    class="page-width mt-8">
     <h2 class="text-2xl font-semibold">{{ block.settings.block2_header_heading }}</h2>
-    <div class="grid grid-cols-4 gap-12">
+    <div class="grid grid-cols-3 gap-12">
       <div class="box_block">
         <img
           src="{{ block.settings.image_heading_1 | image_url: width: 64 }}"
@@ -28,15 +29,6 @@
         <h3 class="text-xl font-semibold">{{
    block.settings.block2_heading_3 }}</h3>
         <p class="mt-2">{{ block.settings.block2_subheading_3 }}</p>
-      </div>
-      <div class="box_block">
-        <img
-          src="{{ block.settings.image_heading_4 | image_url: width: 64 }}"
-          alt="{{ block.settings.image_heading_4.alt | escape }}"
-          loading="lazy">
-        <h3 class="text-xl font-semibold">{{
-   block.settings.block2_heading_4 }}</h3>
-        <p class="mt-2">{{ block.settings.block2_subheading_4 }}</p>
       </div>
     </div>
   </div>
