--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -1,15 +1,15 @@
 {% comment %}
-  Renders a list of product's price (regular, sale)
+    Renders a list of product's price (regular, sale)
 
-  Accepts:
-  - product: {Object} Product Liquid object (optional)
-  - use_variant: {Boolean} Renders selected or first variant price instead of overall product pricing (optional)
-  - show_badges: {Boolean} Renders 'Sale' and 'Sold Out' tags if the product matches the condition (optional)
-  - price_class: {String} Adds a price class to the price element (optional)
-  - show_compare_at_price: {Boolean} Renders the compare at price if the product matches the condition (optional)
+    Accepts:
+    - product: {Object} Product Liquid object (optional)
+    - use_variant: {Boolean} Renders selected or first variant price instead of overall product pricing (optional)
+    - show_badges: {Boolean} Renders 'Sale' and 'Sold Out' tags if the product matches the condition (optional)
+    - price_class: {String} Adds a price class to the price element (optional)
+    - show_compare_at_price: {Boolean} Renders the compare at price if the product matches the condition (optional)
 
-  Usage:
-  {% render 'price', product: product %}
+    Usage:
+    {% render 'price', product: product %}
 {% endcomment %}
 {%- liquid
   if use_variant
@@ -33,27 +33,31 @@
   endif
 
   if target == product and product.price_varies
-    assign money_price = 'products.product.price.from_price_html' | t: price: money_price
+    assign money_price = money_price
   endif
 -%}
 
 <div
   class="
-    price
-    {%- if price_class %} {{ price_class }}{% endif -%}
-    {%- if available == false %} price--sold-out{% endif -%}
-    {%- if compare_at_price > price and product.quantity_price_breaks_configured? != true %} price--on-sale{% endif -%}
-    {%- if compare_at_price > price and product.quantity_price_breaks_configured? %} volume-pricing--sale-badge{% endif -%}
-    {%- if product.price_varies == false and product.compare_at_price_varies %} price--no-compare{% endif -%}
-    {%- if show_badges %} price--show-badge{% endif -%}
-  "
->
+  price
+  {%- if price_class %}
+    {{ price_class }}{% endif -%}
+  {%- if available == false %}
+    price--sold-out{% endif -%}
+  {%- if compare_at_price > price and product.quantity_price_breaks_configured? != true %}
+    price--on-sale{% endif -%}
+  {%- if compare_at_price > price and product.quantity_price_breaks_configured? %}
+    volume-pricing--sale-badge{% endif -%}
+  {%- if product.price_varies == false and product.compare_at_price_varies %}
+    price--no-compare{% endif -%}
+  {%- if show_badges %}
+    price--show-badge{% endif -%}">
   <div class="price__container">
     {%- comment -%}
-      Explanation of description list:
-        - div.price__regular: Displayed when there are no variants on sale
-        - div.price__sale: Displayed when a variant is a sale
-    {%- endcomment -%}
+            Explanation of description list:
+              - div.price__regular: Displayed when there are no variants on sale
+              - div.price__sale: Displayed when a variant is a sale
+        {%- endcomment -%}
     <div class="price__regular">
       {%- if product.quantity_price_breaks_configured? -%}
         {%- if show_compare_at_price and compare_at_price -%}
