--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -453,3 +453,19 @@
   padding: 0;
   max-width: unset;
 }
+
+.image-with-text__heading.inline-richtext {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 58px;
+  color: rgba(211, 165, 64, 1);
+}
+
+@media(max-width: 749px) {
+  .image-with-text__heading.inline-richtext {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    color: rgba(211, 165, 64, 1);
+  }
+}
